--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -119,7 +119,7 @@
     </a>
     <div class="sticky top-0 z-10 w-full">
     {% section 'announcement-bar' %}
-    {% section 'header' %}
+    {% section 'header-two' %}
     </div>
 
     <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
