--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -17,7 +17,7 @@
 <link rel="stylesheet" href="{{ 'component-cart-notification.css' | asset_url }}" media="print" onload="this.media='all'">
 
 
-<div class="bg-white">
+<div class="bg-gray-900">
   <!--
     Mobile menu
 
@@ -295,6 +295,7 @@
       </main-header>
     </nav>
   </header>
+  
 </div>
 
 <script src="{{ 'cart-notification.js' | asset_url }}" defer="defer"></script>
