--- a/sections/header-two.liquid
+++ b/sections/header-two.liquid
@@ -192,9 +192,9 @@
                               >
                               
                               </div>
-                              <a href="{{ meganav_image_one_button_link }}" class="mt-6 block font-medium text-gray-900">
+                              <a href="{{ section.settings.meganav_image_one_button_link }}" class="mt-6 block font-medium text-gray-900">
                                 <span class="absolute z-10 inset-0" aria-hidden="true"></span>
-                                {{ meganav_image_one_button_label }}
+                                {{ section.settings.meganav_image_one_button_label }}
                               </a>
                               <p aria-hidden="true" class="mt-1">Shop now</p>
                             </div>
@@ -222,9 +222,9 @@
                                 height="{{ section.settings.image_two.width | divided_by: section.settings.image_two.aspect_ratio }}"
                               >
                               </div>
-                              <a href="{{ meganav_image_two_button_link }}" class="mt-6 block font-medium text-gray-900">
+                              <a href="{{ section.settings.meganav_image_two_button_link }}" class="mt-6 block font-medium text-gray-900">
                                 <span class="absolute z-10 inset-0" aria-hidden="true"></span>
-                                {{ meganav_image_two_button_label }}
+                                {{ section.settings.meganav_image_two_button_label }}
                               </a>
                               <p aria-hidden="true" class="mt-1">Shop now</p>
                             </div>
