--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -501,6 +501,20 @@
       ]
     },
     {
+      "type": "product_bundle",
+      "name": "Product Bundle",
+      "limit": 1,
+      "settings": [
+        {
+          "type": "checkbox",
+          "id": "enable_product_bundle",
+          "default": true,
+          "label": "t:sections.main-product.blocks.buy_buttons.settings.show_dynamic_checkout.label",
+          "info": "t:sections.main-product.blocks.buy_buttons.settings.show_dynamic_checkout.info"
+        }
+      ]
+    },
+    {
       "type": "description",
       "name": "t:sections.main-product.blocks.description.name",
       "limit": 1
