--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -72,6 +72,8 @@
 
         {%- for block in section.blocks -%}
             {%- case block.type -%}
+            {%- when 'product_bundle' -%}
+              {% render 'product-bundle' %}
             {%- when 'text' -%}
               <p class="product__text{% if block.settings.text_style == 'uppercase' %} caption-with-letter-spacing{% elsif block.settings.text_style == 'subtitle' %} subtitle{% endif %}" {{ block.shopify_attributes }}>
                 {{- block.settings.text -}}
