--- a/sections/product-bundle.liquid
+++ b/sections/product-bundle.liquid
@@ -130,10 +130,7 @@ Kits are now shipping.
             <form class="mt-10">
        
               <div class="mt-10">
-                <div class="flex items-center justify-between">
-                  <h3 class="text-sm text-gray-900 font-medium">Pedals & Hydraulics</h3>
-                  <a href="#" class="text-sm font-medium text-indigo-600 hover:text-indigo-500">Size guide</a>
-                </div>
+             
     
                 <fieldset class="mt-4">
                   <legend class="sr-only">Choose a size</legend>
@@ -142,26 +139,17 @@ Kits are now shipping.
                     
                 {% for block in section.blocks %} 
 
-                {% if block.type == "header" %}
+                {% if block.type == "featured_heading" %}
                   <div class="flex items-center justify-between col-span-2">
                     <h3 class="text-sm text-gray-900 font-medium">Pedals & Hydraulics</h3>
                     <a href="#" class="text-sm font-medium text-indigo-600 hover:text-indigo-500">Size guide</a>
                   </div>
-                {% elsif block.type == "bundle_product" %}
-                  <div>
+                {% elsif block.type == "featured_product" %}
+                  <div class="col-span-{{block.settings.column_span}}">
                     <!-- Active: "ring-2 ring-indigo-500" -->
-                    <label style="background-image: url('https://cdn.shopify.com/s/files/1/0612/9644/3607/files/Three_Pedals_3PGMB001_GM_B-Body_Pedal.jpg?v=1655207587');" class="bg-no-repeat bg-cover bg-center group relative border rounded-md py-3 px-4 flex items-center justify-center text-sm font-medium uppercase hover:bg-gray-50 focus:outline-none sm:flex-1 sm:py-6 bg-white shadow-sm text-gray-900 cursor-pointer">
-                      <input type="radio" name="size-choice" value="XXS" disabled class="sr-only" aria-labelledby="size-choice-0-label">
-                      <span id="size-choice-0-label"> XXS </span>
-                      <span class="absolute -inset-px rounded-md pointer-events-none" aria-hidden="true"></span>
-
-                      <!-- <span aria-hidden="true" class="absolute -inset-px rounded-md border-2 border-gray-200 pointer-events-none">
-                        <svg class="absolute inset-0 w-full h-full text-gray-200 stroke-2" viewBox="0 0 100 100" preserveAspectRatio="none" stroke="currentColor">
-                          <line x1="0" y1="100" x2="100" y2="0" vector-effect="non-scaling-stroke" />
-                        </svg>
-                      </span> -->
-                    </label>
-                    <p class="text-xs text-gray-500 mt-4">'91 - '96 GM B-Body Integrated Clutch and Brake Pedal Assembly</p>
+                    <img class="h-[250px] w-full object-cover rounded-md" src="https://cdn.shopify.com/s/files/1/0612/9644/3607/files/Three_Pedals_3PGMB001_GM_B-Body_Pedal.jpg?v=1655207587">
+                 
+                    <p class="text-xs text-gray-500 mt-4">{{block.settings.bundle_product.title}}</p>
                     <button type="submit" class="mt-2 w-full bg-indigo-600 border border-transparent rounded-md py-3 px-8 flex items-center justify-center text-sm tracking-tighter font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Add</button>
                     </div>
                 {% endif %}
@@ -170,121 +158,7 @@ Kits are now shipping.
 
 
 
-                    <div class="flex items-center justify-between col-span-2">
-                      <h3 class="text-sm text-gray-900 font-medium">Pedals & Hydraulics</h3>
-                      <a href="#" class="text-sm font-medium text-indigo-600 hover:text-indigo-500">Size guide</a>
-                    </div>
-
-                    <div>
-                    <!-- Active: "ring-2 ring-indigo-500" -->
-                    <label style="background-image: url('https://cdn.shopify.com/s/files/1/0612/9644/3607/files/Three_Pedals_3PGMB001_GM_B-Body_Pedal.jpg?v=1655207587');" class="bg-no-repeat bg-cover bg-center group relative border rounded-md py-3 px-4 flex items-center justify-center text-sm font-medium uppercase hover:bg-gray-50 focus:outline-none sm:flex-1 sm:py-6 bg-white shadow-sm text-gray-900 cursor-pointer">
-                      <input type="radio" name="size-choice" value="XXS" disabled class="sr-only" aria-labelledby="size-choice-0-label">
-                      <span id="size-choice-0-label"> XXS </span>
-                      <span class="absolute -inset-px rounded-md pointer-events-none" aria-hidden="true"></span>
-  
-                      <!-- <span aria-hidden="true" class="absolute -inset-px rounded-md border-2 border-gray-200 pointer-events-none">
-                        <svg class="absolute inset-0 w-full h-full text-gray-200 stroke-2" viewBox="0 0 100 100" preserveAspectRatio="none" stroke="currentColor">
-                          <line x1="0" y1="100" x2="100" y2="0" vector-effect="non-scaling-stroke" />
-                        </svg>
-                      </span> -->
-                    </label>
-                    <p class="text-xs text-gray-500 mt-4">'91 - '96 GM B-Body Integrated Clutch and Brake Pedal Assembly</p>
-                    <button type="submit" class="mt-2 w-full bg-indigo-600 border border-transparent rounded-md py-3 px-8 flex items-center justify-center text-sm tracking-tighter font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Add</button>
-                    </div>
-                    
-                    <div>
-                    <!-- Active: "ring-2 ring-indigo-500" -->
-                    <label style="background-image: url('https://cdn.shopify.com/s/files/1/0612/9644/3607/files/673750-450x450.jpg?v=1658608876');" class="bg-no-repeat bg-cover bg-center group relative border rounded-md py-3 px-4 flex items-center justify-center text-sm font-medium uppercase hover:bg-gray-50 focus:outline-none sm:flex-1 sm:py-6 bg-white shadow-sm text-gray-900 cursor-pointer">
-                      <input type="radio" name="size-choice" value="XS" class="sr-only" aria-labelledby="size-choice-1-label">
-                      <span id="size-choice-1-label"> XS </span>
-    
-                      <!--
-                        Active: "border", Not Active: "border-2"
-                        Checked: "border-indigo-500", Not Checked: "border-transparent"
-                      -->
-                      <span class="absolute -inset-px rounded-md pointer-events-none" aria-hidden="true"></span>
-                    </label>
-                    <p class="text-xs text-gray-500 mt-4">B-Body Clutch Hydraulics Package 7/8" MC (excl. HRB)</p>
-
-                    <button type="submit" class="mt-2 w-full bg-indigo-600 border border-transparent rounded-md py-3 px-8 flex items-center justify-center text-sm tracking-tighter font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Add</button>
-                  
-                  </div>
-
-                  
-                  <div>
-                    <!-- Active: "ring-2 ring-indigo-500" -->
-                    <label style="background-image: url('https://cdn.shopify.com/s/files/1/0612/9644/3607/files/686600.jpg?v=1658611065');" class="bg-no-repeat bg-cover bg-center group relative border rounded-md py-3 px-4 flex items-center justify-center text-sm font-medium uppercase hover:bg-gray-50 focus:outline-none sm:flex-1 sm:py-6 bg-white shadow-sm text-gray-900 cursor-pointer">
-                      <input type="radio" name="size-choice" value="XS" class="sr-only" aria-labelledby="size-choice-1-label">
-                      <span id="size-choice-1-label"> XS </span>
-    
-                      <!--
-                        Active: "border", Not Active: "border-2"
-                        Checked: "border-indigo-500", Not Checked: "border-transparent"
-                      -->
-                      <span class="absolute -inset-px rounded-md pointer-events-none" aria-hidden="true"></span>
-                    </label>
-                    <p class="text-xs text-gray-500 mt-4">'94-'96 B-Body LT1 T56 Transmission Installation Package - Orig LT1</p>
-
-                    <button type="submit" class="mt-2 w-full bg-indigo-600 border border-transparent rounded-md py-3 px-8 flex items-center justify-center text-sm tracking-tighter font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Add</button>
-                  
-                  </div>
-
-
-                  
-                  <div>
-                    <!-- Active: "ring-2 ring-indigo-500" -->
-                    <label style="background-image: url('https://cdn.shopify.com/s/files/1/0612/9644/3607/files/rm-9023.jpg?v=1658611126');" class="bg-no-repeat bg-cover bg-center group relative border rounded-md py-3 px-4 flex items-center justify-center text-sm font-medium uppercase hover:bg-gray-50 focus:outline-none sm:flex-1 sm:py-6 bg-white shadow-sm text-gray-900 cursor-pointer">
-                      <input type="radio" name="size-choice" value="XS" class="sr-only" aria-labelledby="size-choice-1-label">
-                      <span id="size-choice-1-label"> XS </span>
-    
-                      <!--
-                        Active: "border", Not Active: "border-2"
-                        Checked: "border-indigo-500", Not Checked: "border-transparent"
-                      -->
-                      <span class="absolute -inset-px rounded-md pointer-events-none" aria-hidden="true"></span>
-                    </label>
-                    <p class="text-xs text-gray-500 mt-4">Bellhousing for Chevy small or big block to LT1 T56</p>
-
-                    <button type="submit" class="mt-2 w-full bg-indigo-600 border border-transparent rounded-md py-3 px-8 flex items-center justify-center text-sm tracking-tighter font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Add</button>
-                  
-                  </div>
-
-                  <div>
-                    <!-- Active: "ring-2 ring-indigo-500" -->
-                    <label style="background-image: url('https://cdn.shopify.com/s/files/1/0612/9644/3607/files/673750-450x450.jpg?v=1658608876');" class="bg-no-repeat bg-cover bg-center group relative border rounded-md py-3 px-4 flex items-center justify-center text-sm font-medium uppercase hover:bg-gray-50 focus:outline-none sm:flex-1 sm:py-6 bg-white shadow-sm text-gray-900 cursor-pointer">
-                      <input type="radio" name="size-choice" value="XS" class="sr-only" aria-labelledby="size-choice-1-label">
-                      <span id="size-choice-1-label"> XS </span>
-    
-                      <!--
-                        Active: "border", Not Active: "border-2"
-                        Checked: "border-indigo-500", Not Checked: "border-transparent"
-                      -->
-                      <span class="absolute -inset-px rounded-md pointer-events-none" aria-hidden="true"></span>
-                    </label>
-                    <p class="text-xs text-gray-500 mt-4">T56 Electronics Package with Cruise Control for GM</p>
-
-                    <button type="submit" class="mt-2 w-full bg-indigo-600 border border-transparent rounded-md py-3 px-8 flex items-center justify-center text-sm tracking-tighter font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Add</button>
-                  
-                  </div>
-
-                  <div>
-                    <!-- Active: "ring-2 ring-indigo-500" -->
-                    <label style="background-image: url('https://cdn.shopify.com/s/files/1/0612/9644/3607/files/673750-450x450.jpg?v=1658608876');" class="bg-no-repeat bg-cover bg-center group relative border rounded-md py-3 px-4 flex items-center justify-center text-sm font-medium uppercase hover:bg-gray-50 focus:outline-none sm:flex-1 sm:py-6 bg-white shadow-sm text-gray-900 cursor-pointer">
-                      <input type="radio" name="size-choice" value="XS" class="sr-only" aria-labelledby="size-choice-1-label">
-                      <span id="size-choice-1-label"> XS </span>
-    
-                      <!--
-                        Active: "border", Not Active: "border-2"
-                        Checked: "border-indigo-500", Not Checked: "border-transparent"
-                      -->
-                      <span class="absolute -inset-px rounded-md pointer-events-none" aria-hidden="true"></span>
-                    </label>
-                    <p class="text-xs text-gray-500 mt-4">1996 Impala SS Manual Transmission Console Insert</p>
-
-                    <button type="submit" class="mt-2 w-full bg-indigo-600 border border-transparent rounded-md py-3 px-8 flex items-center justify-center text-sm tracking-tighter font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Add</button>
-                  
-                  </div>
-
+            
 
                 
                   </div>
