--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -1,5 +1,5 @@
  <!-- Hero section -->
- <div class="relative bg-gray-900">
+ <div class="relative bg-gray-900 m-auto">
   <!-- Decorative image and overlay -->
   <div aria-hidden="true" class="absolute inset-0 overflow-hidden">
     <img
@@ -59,7 +59,6 @@
 {
   "name": "t:sections.image-banner.name",
   "tag": "section",
-  "class": "spaced-section spaced-section--full-width",
   "settings": [
     {
       "type": "image_picker",
@@ -74,13 +73,13 @@
     {
       "type": "text",
       "id": "heading",
-      "default": "Title Goes Here!",
+      "default": "The Ultimate B-Body Swap",
       "label": "Heading"
     },
     {
       "type": "text",
       "id": "subheading",
-      "default": "Subtitle goes here!",
+      "default": "Trespedals",
       "label": "Sub Heading"
     },
     {
