--- a/sections/header-two.liquid
+++ b/sections/header-two.liquid
@@ -48,27 +48,68 @@
             <!-- 'Women' tab panel, show/hide based on tab state. -->
             <div id="tabs-1-panel-1" class="pt-10 pb-8 px-4 space-y-10" aria-labelledby="tabs-1-tab-1" role="tabpanel" tabindex="0">
               <div class="grid grid-cols-2 gap-x-4">
+                {% if section.settings.meganav_image_one != blank %}
+
                 <div class="group relative text-sm">
                   <div class="aspect-w-1 aspect-h-1 rounded-lg bg-gray-100 overflow-hidden group-hover:opacity-75">
-                    <img src="https://tailwindui.com/img/ecommerce-images/mega-menu-category-01.jpg" alt="Models sitting back to back, wearing Basic Tee in black and bone." class="object-center object-cover">
+                    <img
+                      srcset="{%- if section.settings.meganav_image_one.width >= 375 -%}{{ section.settings.meganav_image_one | img_url: '375x' }} 375w,{%- endif -%}
+                        {%- if section.settings.meganav_image_one.width >= 750 -%}{{ section.settings.meganav_image_one | img_url: '750x' }} 750w,{%- endif -%}
+                        {%- if section.settings.meganav_image_one.width >= 1100 -%}{{ section.settings.meganav_image_one | img_url: '1100x' }} 1100w,{%- endif -%}
+                        {%- if section.settings.meganav_image_one.width >= 1500 -%}{{ section.settings.meganav_image_one | img_url: '1500x' }} 1500w,{%- endif -%}
+                        {%- if section.settings.meganav_image_one.width >= 1780 -%}{{ section.settings.meganav_image_one | img_url: '1780x' }} 1780w,{%- endif -%}
+                        {%- if section.settings.meganav_image_one.width >= 2000 -%}{{ section.settings.meganav_image_one | img_url: '2000x' }} 2000w,{%- endif -%}
+                        {%- if section.settings.meganav_image_one.width >= 3000 -%}{{ section.settings.meganav_image_one | img_url: '3000x' }} 3000w,{%- endif -%}
+                        {%- if section.settings.meganav_image_one.width >= 3840 -%}{{ section.settings.meganav_image_one | img_url: '3840x' }} 3840w,{%- endif -%}
+                        {{ section.settings.meganav_image_one | img_url: 'master' }} {{ section.settings.meganav_image_one.width }}w"
+                      sizes="100vw"
+                      src="{{ section.settings._image_one | img_url: '500x' }}"
+                      loading="lazy"
+                      class="object-center object-cover"
+                      alt="{{ section.settings._image_one.alt | escape }}"
+                      width="{{ section.settings._image_one.width }}"
+                      height="{{ section.settings._image_one.width | divided_by: section.settings._image_one.aspect_ratio }}"
+                    >                  
                   </div>
-                  <a href="#" class="mt-6 block font-medium text-gray-900">
+                    <a href="{{ section.settings.meganav_image_one_button_link }}" class="mt-6 block font-medium text-gray-900">
+                      <span class="absolute z-10 inset-0" aria-hidden="true"></span>
+                      {{ section.settings.meganav_image_one_button_label }}
+                    </a>
+                  <p aria-hidden="true" class="mt-1">Shop now</p>
+                </div>
+                {% endif %}
+
+               
+
+              {% if section.settings.meganav_image_two != blank %}
+                <div class="group relative text-sm">
+                  <div class="aspect-w-1 aspect-h-1 rounded-lg bg-gray-100 overflow-hidden group-hover:opacity-75">
+                    <img
+                    srcset="{%- if section.settings.meganav_image_two.width >= 375 -%}{{ section.settings.meganav_image_two | img_url: '375x' }} 375w,{%- endif -%}
+                      {%- if section.settings.meganav_image_two.width >= 750 -%}{{ section.settings.meganav_image_two | img_url: '750x' }} 750w,{%- endif -%}
+                      {%- if section.settings.meganav_image_two.width >= 1100 -%}{{ section.settings.meganav_image_two | img_url: '1100x' }} 1100w,{%- endif -%}
+                      {%- if section.settings.meganav_image_two.width >= 1500 -%}{{ section.settings.meganav_image_two | img_url: '1500x' }} 1500w,{%- endif -%}
+                      {%- if section.settings.meganav_image_two.width >= 1780 -%}{{ section.settings.meganav_image_two | img_url: '1780x' }} 1780w,{%- endif -%}
+                      {%- if section.settings.meganav_image_two.width >= 2000 -%}{{ section.settings.meganav_image_two | img_url: '2000x' }} 2000w,{%- endif -%}
+                      {%- if section.settings.meganav_image_two.width >= 3000 -%}{{ section.settings.meganav_image_two | img_url: '3000x' }} 3000w,{%- endif -%}
+                      {%- if section.settings.meganav_image_two.width >= 3840 -%}{{ section.settings.meganav_image_two | img_url: '3840x' }} 3840w,{%- endif -%}
+                      {{ section.settings.meganav_image_two | img_url: 'master' }} {{ section.settings.meganav_image_two.width }}w"
+                    sizes="100vw"
+                    src="{{ section.settings.image_two | img_url: '500x' }}"
+                    loading="lazy"
+                    class="object-center object-cover"
+                    alt="{{ section.settings.image_two.alt | escape }}"
+                    width="{{ section.settings.image_two.width }}"
+                    height="{{ section.settings.image_two.width | divided_by: section.settings.image_two.aspect_ratio }}"
+                  >
+                  </div>
+                  <a href="{{ section.settings.meganav_image_two_button_link }}" class="mt-6 block font-medium text-gray-900">
                     <span class="absolute z-10 inset-0" aria-hidden="true"></span>
-                    New Arrivals
+                    {{ section.settings.meganav_image_two_button_label }}
                   </a>
                   <p aria-hidden="true" class="mt-1">Shop now</p>
                 </div>
-  
-                <div class="group relative text-sm">
-                  <div class="aspect-w-1 aspect-h-1 rounded-lg bg-gray-100 overflow-hidden group-hover:opacity-75">
-                    <img src="https://tailwindui.com/img/ecommerce-images/mega-menu-category-02.jpg" alt="Close up of Basic Tee fall bundle with off-white, ochre, olive, and black tees." class="object-center object-cover">
-                  </div>
-                  <a href="#" class="mt-6 block font-medium text-gray-900">
-                    <span class="absolute z-10 inset-0" aria-hidden="true"></span>
-                    Basic Tees
-                  </a>
-                  <p aria-hidden="true" class="mt-1">Shop now</p>
-                </div>
+                {% endif %}
               </div>
               {% for link in linklists['main-menu'].links %}
               {% if link.links != blank %}
@@ -125,7 +166,7 @@
   
             <!-- Logo -->
             <div class="ml-4 flex lg:ml-0">
-              <a href="#">
+              <a href="{{shop.url}}">
                 <span class="sr-only">Workflow</span>
                 {%- if section.settings.logo != blank -%}
                 {%- assign logo_alt = section.settings.logo.alt | default: shop.name | escape -%}
@@ -149,7 +190,7 @@
                 <div class="flex">
                   <div class="relative flex">
                     <!-- Item active: "border-indigo-600 text-indigo-600", Item inactive: "border-transparent text-gray-700 hover:text-gray-800" -->
-                    <button id="meganav-heading" type="button" class="border-transparent text-gray-700 hover:text-gray-800 relative z-10 flex items-center transition-colors ease-out duration-200 text-sm font-medium border-b-2 -mb-px pt-px" meganav_heading_index="{{forloop.index}}">{{ link.title }}{% render 'icon-caret' %}</button>
+                    <button id="meganav-heading" type="button" class="border-transparent text-white hover:text-gray-100 relative z-10 flex items-center transition-colors ease-out duration-200 text-sm font-medium border-b-2 -mb-px pt-px" meganav_heading_index="{{forloop.index}}">{{ link.title }}{% render 'icon-caret' %}</button>
                   </div>
   
                   <!--
@@ -262,7 +303,7 @@
                 </div>
   
                 {% else %}
-                <a href="{{ link.url }}" class="flex items-center text-sm font-medium text-gray-700 hover:text-gray-800">{{ link.title }}</a>
+                <a href="{{ link.url }}" class="flex items-center text-sm font-medium text-white hover:text-gray-100">{{ link.title }}</a>
 
                 {% endif %}
                 {% endfor %}
@@ -271,18 +312,12 @@
   
             <div class="ml-auto flex items-center">
               <div class="hidden lg:flex lg:flex-1 lg:items-center lg:justify-end lg:space-x-6">
-                <a href="#" class="text-sm font-medium text-gray-700 hover:text-gray-800">Sign in</a>
+                <a href="#" class="text-sm font-medium text-white hover:text-gray-100">Sign in</a>
                 <span class="h-6 w-px bg-gray-200" aria-hidden="true"></span>
-                <a href="#" class="text-sm font-medium text-gray-700 hover:text-gray-800">Create account</a>
+                <a href="#" class="text-sm font-medium text-white hover:text-gray-100">Create account</a>
               </div>
   
-              <div class="hidden lg:ml-8 lg:flex">
-                <a href="#" class="text-gray-700 hover:text-gray-800 flex items-center">
-                  <img src="https://tailwindui.com/img/flags/flag-canada.svg" alt="" class="w-5 h-auto block flex-shrink-0">
-                  <span class="ml-3 block text-sm font-medium"> CAD </span>
-                  <span class="sr-only">, change currency</span>
-                </a>
-              </div>
+       
   
               <!-- Search -->
               <div class="flex lg:ml-6">
