update new collection feature

--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -19,63 +19,83 @@
 
 
 
-<div class="bg-white">
-  <div class="max-w-2xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
+<div class="m-auto">
+  <div class="mx-auto pb-2">
     <h2 class="sr-only">Products</h2>
-    <div class="relative mb-10">
-      <h2 class="text-center text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl">{{section.settings.title}}</h2>
-      <p class="mt-4 max-w-3xl mx-auto text-center text-base text-gray-500">
+    <div class="max-w-2xl mx-auto relative py-10 lg:max-w-7xl bg-gradient-to-b from-lightPrimaryBlue via-blue to-gray-900 bg-opacity-90 mb-2">
+      <h2 class="text-center text-3xl leading-8 font-extrabold tracking-tight text-white sm:text-4xl" style="text-shadow: 1px 2px black;">{{section.settings.title}}</h2>
+      <p class="mt-4 max-w-3xl mx-auto text-center text-base text-white ">
         {{ section.settings.sub_title }}
       </p>
     </div>
-    <div class="grid max-w-3xl lg:max-w-5xl m-auto gap-y-10 grid-cols-2 gap-x-12 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-16">
-
+    <div class="min-h-full grid grid-rows-2 grid-cols-1 md:grid-rows-1 md:grid-cols-3 max-w-7xl mx-auto gap-2">
       {% for block in section.blocks %}
-        <a href="{{block.settings.url}}" class="group text-center">
-          <div class="w-full aspect-w-1 aspect-h-1 bg-gray-200 rounded-full overflow-hidden">
-            <img
-              srcset="{%- if block.settings.image.width >= 375 -%}{{ block.settings.image | img_url: '375x' }} 375w,{%- endif -%}
-                {%- if block.settings.image.width >= 750 -%}{{ block.settings.image | img_url: '750x' }} 750w,{%- endif -%}
-                {%- if block.settings.image.width >= 1100 -%}{{ block.settings.image | img_url: '1100x' }} 1100w,{%- endif -%}
-                {%- if block.settings.image.width >= 1500 -%}{{ block.settings.image | img_url: '1500x' }} 1500w,{%- endif -%}
-                {%- if block.settings.image.width >= 1780 -%}{{ block.settings.image | img_url: '1780x' }} 1780w,{%- endif -%}
-                {%- if block.settings.image.width >= 2000 -%}{{ block.settings.image | img_url: '2000x' }} 2000w,{%- endif -%}
-                {%- if block.settings.image.width >= 3000 -%}{{ block.settings.image | img_url: '3000x' }} 3000w,{%- endif -%}
-                {%- if block.settings.image.width >= 3840 -%}{{ block.settings.image | img_url: '3840x' }} 3840w,{%- endif -%}
-                {{ block.settings.image | img_url: 'master' }} {{ block.settings.image.width }}w"
-              sizes="100vw"
-              src="{{ block.settings.image | img_url: '500x' }}"
-              loading="lazy"
-              class="w-full h-full object-center object-cover group-hover:opacity-75"
-              alt="{{ block.settings.image.alt | escape }}"
-              width="{{ block.settings.image.width }}"
-              height="{{ block.settings.image.width | divided_by: block.settings.image.aspect_ratio }}"
-            >
-          </div>
-          <h3 class="mt-4 text-sm text-gray-700">{{block.settings.title}}</h3>
-        </a>
+    
+      <div class="relative flex group">
+        <img
+          srcset="{%- if block.settings.image.width >= 375 -%}{{ block.settings.image | img_url: '375x' }} 375w,{%- endif -%}
+            {%- if block.settings.image.width >= 750 -%}{{ block.settings.image | img_url: '750x' }} 750w,{%- endif -%}
+            {%- if block.settings.image.width >= 1100 -%}{{ block.settings.image | img_url: '1100x' }} 1100w,{%- endif -%}
+            {%- if block.settings.image.width >= 1500 -%}{{ block.settings.image | img_url: '1500x' }} 1500w,{%- endif -%}
+            {%- if block.settings.image.width >= 1780 -%}{{ block.settings.image | img_url: '1780x' }} 1780w,{%- endif -%}
+            {%- if block.settings.image.width >= 2000 -%}{{ block.settings.image | img_url: '2000x' }} 2000w,{%- endif -%}
+            {%- if block.settings.image.width >= 3000 -%}{{ block.settings.image | img_url: '3000x' }} 3000w,{%- endif -%}
+            {%- if block.settings.image.width >= 3840 -%}{{ block.settings.image | img_url: '3840x' }} 3840w,{%- endif -%}
+            {{ block.settings.image | img_url: 'master' }} {{ block.settings.image.width }}w"
+          sizes="100vw"
+          src="{{ block.settings.image | img_url: '1000x' }}"
+          loading="lazy"
+          class="absolute inset-0 w-full h-full object-center object-cover group-hover:opacity-90"
+          alt="{{ block.settings.image.alt | escape }}"
+          width="{{ block.settings.image.width }}"
+          height="{{ block.settings.image.width | divided_by: block.settings.image.aspect_ratio }}"
+        >
+        <div aria-hidden="true" class="bg-gradient-to-b from-transparent to-black opacity-50"></div>
+
+        <div class="relative w-full flex flex-col items-start justify-end bg-black bg-opacity-40 p-4 sm:p-6 h-[270px] md:h-125 lg:h-[650px]">
+          <h2 class="text-lg font-medium text-white text-opacity-75">{{block.settings.sub_title}}</h2>
+          <p class="mt-1 text-base font-medium text-white">{{block.settings.title}}</p>
+          <a href="{{block.settings.url}}" class="mt-2 text-sm font-medium text-white bg-transparent py-2.5 pr-4 rounded-md">
+            <span class="absolute inset-0"></span>
+
+            SHOP NOW</a>
+        </div>
+      </div>
+    
       {% endfor %}
- 
-      <!-- More products... -->
+    
+    
     </div>
   </div>
 </div>
 
+<!-- This example requires Tailwind CSS v2.0+ -->
+<!--
+  This example requires updating your template:
+
+  ```
+  <html class="h-full bg-gray-50">
+  <body class="h-full">
+  ```
+-->
+
+
+
 {% else %}
 
 <!-- This example requires Tailwind CSS v2.0+ -->
-<div class="bg-white">
+<div class="bg-transparent max-w-7xl m-auto">
   <div class="max-w-full mx-auto">
     <!-- <p class="text-center text-base font-semibold uppercase text-gray-600 tracking-wider">Looking for other products? We create exhaust systems for numerous cars.</p> -->
 
-    <div class="bg-gray-800 relative pb-10 pt-10">
-      <h2 class="text-center text-3xl leading-8 font-extrabold tracking-tight text-white sm:text-4xl">{{section.settings.title}}</h2>
+    <div class="bg-gradient-to-t from-lightPrimaryBlue via-blue to-gray-900 bg-opacity-90 relative pb-10 pt-10 px-4 mb-2">
+      <h2 class="text-center text-3xl leading-8 font-extrabold tracking-tight text-white sm:text-4xl" style="text-shadow: 1px 2px black;">{{section.settings.title}}</h2>
       <p class="mt-4 max-w-3xl mx-auto text-center text-base text-white">
         {{ section.settings.sub_title }}
       </p>
     </div>
 
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-0.5 lg:grid-cols-3">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-2 lg:grid-cols-3">
       {% for block in section.blocks %}
         <div class="col-span-1 flex justify-around items-center py-16 px-4 bg-gray-50">
           <div>
@@ -111,6 +131,9 @@
     </div>
   </div>
 </div>
+
+
+
 {% endif %}
 
 
