remove max-width

--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -22,13 +22,13 @@
 <div class="m-auto">
   <div class="mx-auto pb-2">
     <h2 class="sr-only">Products</h2>
-    <div class="max-w-2xl mx-auto relative py-10 lg:max-w-7xl bg-gradient-to-b from-lightPrimaryBlue via-blue to-gray-900 bg-opacity-90 mb-2">
+    <div class="mx-auto relative py-6 bg-gradient-to-b from-lightPrimaryBlue via-blue to-gray-900 bg-opacity-90 mb-2">
       <h2 class="text-center text-3xl leading-8 font-extrabold tracking-tight text-white sm:text-4xl" style="text-shadow: 1px 2px black;">{{section.settings.title}}</h2>
-      <p class="mt-4 max-w-3xl mx-auto text-center text-base text-white ">
+      <p class="mt-2 max-w-3xl mx-auto text-center text-base text-white ">
         {{ section.settings.sub_title }}
       </p>
     </div>
-    <div class="min-h-full grid grid-rows-2 grid-cols-1 md:grid-rows-1 md:grid-cols-3 max-w-7xl mx-auto gap-2">
+    <div class="min-h-full grid grid-rows-2 grid-cols-1 md:grid-rows-1 md:grid-cols-3 mx-auto gap-2">
       {% for block in section.blocks %}
     
       <div class="relative flex group">
