--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -21,7 +21,7 @@
             <p class="mt-1 text-base text-gray-500 text-center">Please add stuff to the cart!</p>
           </div>
           <div class="mt-10 flex justify-center space-x-3 sm:border-l sm:border-transparent">
-            <a href="/" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-lightPrimaryBlue hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"> Go back home </a>
+            <a href="/" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-primaryRed hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"> Go back home </a>
             <a href="/pages/contact" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-gray-900 bg-white hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"> Contact support </a>
           </div>
         </div>
