--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -20,15 +20,22 @@
 
 
 <div class="m-auto">
-  <div class="mx-auto pb-2">
-    <h2 class="sr-only">Products</h2>
-    <div class="mx-auto relative py-6 bg-gradient-to-b from-lightPrimaryBlue via-blue to-gray-900 bg-opacity-90 mb-2">
-      <h2 class="text-center text-3xl leading-8 font-extrabold tracking-tight text-white sm:text-4xl" style="text-shadow: 1px 2px black;">{{section.settings.title}}</h2>
-      <p class="mt-2 max-w-3xl mx-auto text-center text-base text-white ">
+  <div class="mx-auto">
+    <div class="bg-gray-600 overflow-hidden relative">
+    <div class="max-w-7xl mx-auto relative py-6 mb-2 overflow-hidden z-20">
+   
+      <h2 class="ml-[20px] text-left text-3xl leading-8 font-extrabold tracking-tight text-white sm:text-4xl">{{section.settings.title}}</h2>
+      <p class="ml-[20px] mt-2 mx-auto text-left text-base text-white ">
         {{ section.settings.sub_title }}
       </p>
     </div>
-    <div class="min-h-full grid grid-rows-2 grid-cols-1 md:grid-rows-1 md:grid-cols-3 mx-auto gap-2">
+    <div aria-hidden="true" class="absolute inset-0 bg-gray-900 opacity-75 z-10"></div>
+
+    <div aria-hidden="true" class="absolute inset-0 overflow-hidden">
+      <img class="hidden md:block w-full h-full object-center object-cover" src="https://cdn.shopify.com/s/files/1/0612/9644/3607/files/Three_Pedals_T56_billet_shift_knob-12.jpg?v=1655377007"/>
+    </div>
+  </div>
+    <div class="min-h-full grid grid-rows-2 grid-cols-1 md:grid-rows-1 md:grid-cols-3 mx-auto">
       {% for block in section.blocks %}
     
       <div class="relative flex group">
