--- a/sections/product-bundle.liquid
+++ b/sections/product-bundle.liquid
@@ -53,11 +53,11 @@
       </nav>
   
       <!-- Image gallery -->
-      <div class="mt-6 max-w-2xl mx-auto sm:px-6 lg:max-w-7xl lg:grid lg:grid-cols-3 lg:gap-x-8 lg:px-8">
-        <div class="hidden aspect-w-3 aspect-h-4 rounded-lg overflow-hidden lg:block">
+      <div class="mt-6 max-w-2xl mx-auto sm:px-6 md:max-w-7xl md:grid md:grid-cols-3 md:gap-x-8 md:px-8">
+        <div class="hidden aspect-w-3 aspect-h-4 rounded-lg overflow-hidden md:block">
           <img src="https://cdn.shopify.com/s/files/1/0612/9644/3607/files/Three_Pedals_T56_billet_shift_knob-13.jpg?v=1655377447" alt="Two each of gray, white, and black shirts laying flat." class="w-full h-full object-center object-cover">
         </div>
-        <div class="hidden lg:grid lg:grid-cols-1 lg:gap-y-8">
+        <div class="hidden md:grid md:grid-cols-1 md:gap-y-8">
           <div class="aspect-w-3 aspect-h-2 rounded-lg overflow-hidden">
             <img src="https://cdn.shopify.com/s/files/1/0612/9644/3607/files/Three_Pedals_3P2-13.jpg?v=1655377207" alt="Model wearing plain black basic tee." class="w-full h-full object-center object-cover">
           </div>
@@ -65,26 +65,26 @@
             <img src="https://cdn.shopify.com/s/files/1/0612/9644/3607/files/Three_Pedals_Tremec_Magnum-F-8_1.jpg?v=1655376859" alt="Model wearing plain gray basic tee." class="w-full h-full object-center object-cover">
           </div>
         </div>
-        <div class="aspect-w-4 aspect-h-5 sm:rounded-lg sm:overflow-hidden lg:aspect-w-3 lg:aspect-h-4">
+        <div class="aspect-w-4 aspect-h-5 sm:rounded-lg sm:overflow-hidden md:aspect-w-3 md:aspect-h-4">
           <img src="https://cdn.shopify.com/s/files/1/0612/9644/3607/files/Three_Pedals_3PGMB001_GM_B-Body_Pedal.jpg?v=1655207587" alt="Model wearing plain white basic tee." class="w-full h-full object-center object-cover">
         </div>
       </div>
   
       <!-- Product info -->
-      <div class="max-w-2xl mx-auto pt-10 px-4 sm:px-6 lg:max-w-7xl lg:pt-8 lg:px-8 lg:grid lg:grid-cols-3 lg:grid-rows-[auto,auto,1fr] lg:gap-x-8">
-        <div class="lg:col-span-2 lg:border-r lg:border-gray-200 lg:pr-8">
+      <div class="max-w-2xl mx-auto pt-10 px-4 sm:px-6 md:max-w-7xl md:pt-8 md:px-8 md:grid md:grid-cols-3 md:grid-rows-[auto,auto,1fr] md:gap-x-8">
+        <div class="md:col-span-2 lg:border-r lg:border-gray-200 md:pr-8">
           <h1 class="text-2xl font-extrabold tracking-tight text-gray-900 sm:text-3xl">Build Your Kit</h1>
           <p>The essential items for your swap have been pre-selected. If you wish to add, change or remove any of the items in the available options feel free to do so below.</p>
         </div>
   
         <!-- Options -->
-        <div class=" mt-4 lg:mt-0 lg:row-span-3">
+        <div class="mt-4 md:mt-0 md:row-span-3">
 
           <!-- Reviews -->
       
           <div class="bg-gray-100 p-3 mb-4">
             <h3 class="sr-only">Description</h3>
-            <h1 class="text-xl font-extrabold tracking-tight text-gray-900 sm:text-xl pb-0">Kit Contents</h1>
+            <h1 class="text-xl font-extrabold tracking-tight text-gray-900 sm:text-xl">Kit Contents</h1>
 
               <h2 class="sr-only">Product information</h2>
   
@@ -96,11 +96,12 @@
             </div>
           </div>
           <button id="add-to-bundle" class="mb-8 w-full bg-indigo-600 border border-transparent rounded-md py-3 px-8 flex items-center justify-center text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Add Kit To Cart</button>
-
+          <span class="hidden md:block">
           {{product.description}}
+          </span>
         </div>
   
-        <div class="py-10 lg:pt-6 lg:pb-16 lg:col-start-1 lg:col-span-2 lg:border-r lg:border-gray-200 lg:pr-8">
+        <div class="py-4 md:py-4 md:pb-16 md:col-start-1 md:col-span-2 md:border-r md:border-gray-200 md:pr-8">
           <!-- Description and details -->
   
           <!-- Options -->
