--- a/templates/customers/account.liquid
+++ b/templates/customers/account.liquid
@@ -1,20 +1,34 @@
 {{ 'customer.css' | asset_url | stylesheet_tag }}
 
-<div class="customer account">
+<div class="customer account max-w-7xl m-auto py-16 px-8">
+  <div class="flex flex-col text-center sm:flex-row sm:text-left justify-between align-top">
   <div>
-    <h1>{{ 'customer.account.title' | t }}</h1>
-    <a href="{{ routes.account_logout_url }}">
-      <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" fill="none" viewBox="0 0 18 19">
+    <h1 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-5xl">{{ 'customer.account.title' | t }}</h1>
+    <a class="mt-2 text-sm text-gray-500 flex items-center" href="{{ routes.account_logout_url }}">
+      <svg class="h-5 w-5 mr-2" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" fill="none" viewBox="0 0 18 19">
         <path fill-rule="evenodd" clip-rule="evenodd" d="M6 4.5a3 3 0 116 0 3 3 0 01-6 0zm3-4a4 4 0 100 8 4 4 0 000-8zm5.58 12.15c1.12.82 1.83 2.24 1.91 4.85H1.51c.08-2.6.79-4.03 1.9-4.85C4.66 11.75 6.5 11.5 9 11.5s4.35.26 5.58 1.15zM9 10.5c-2.5 0-4.65.24-6.17 1.35C1.27 12.98.5 14.93.5 18v.5h17V18c0-3.07-.77-5.02-2.33-6.15-1.52-1.1-3.67-1.35-6.17-1.35z" fill="currentColor">
       </svg>
       {{ 'customer.log_out' | t }}
     </a>
   </div>
 
-  <div class="flex mt-5">
+  
+  <div>
+    <h2 class="text-2xl font-extrabold tracking-tight text-gray-900 sm:text-3xl">{{ 'customer.account.details' | t }}</h2>
+    <span class="text-sm">
+    {{ customer.default_address | format_address }}
+    </span>
+    <a class="text-sm underline" href="{{ routes.account_addresses_url }}">
+      {{ 'customer.account.view_addresses' | t }} ({{ customer.addresses_count }})
+    </a>
+  </div>
+
+  </div>
+
+  <div class="bg-gray-200 rounded-lg flex mt-5 p-2 sm:p-8">
     <div class="flex-grow">
-      <div class="max-w-7xl mx-auto sm:px-2 lg:px-8">
-        <div class="max-w-2xl mx-auto px-4 lg:max-w-4xl lg:px-0">
+      <div class="max-w-7xl mx-auto">
+        <div class="mx-auto">
           <h1 class="text-2xl font-extrabold tracking-tight text-gray-900 sm:text-3xl">Order history</h1>
           <p class="mt-2 text-sm text-gray-500">Check the status of recent orders, manage returns, and discover similar products.</p>
         </div>
@@ -28,10 +42,10 @@
             <div>
             
   
-              <div class="mt-16">
+              <div class="mt-8">
                 <h2 class="sr-only">Recent orders</h2>
-                <div class="max-w-7xl mx-auto sm:px-2 lg:px-8">
-                  <div class="max-w-2xl mx-auto space-y-8 sm:px-4 lg:max-w-4xl lg:px-0">
+                <div class="bg-gray-200 max-w-7xl mx-auto">
+                  <div class="mr-auto space-y-8 sm:px-4 lg:px-0">
                     
                     
                     {%- for order in customer.orders -%}
@@ -79,7 +93,7 @@
                               To: "transform opacity-0 scale-95"
                           -->
                           <div class="origin-bottom-right absolute right-0 mt-2 w-40 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="menu-0-button" tabindex="-1">
-                            <div class="py-1" role="none">
+                            <div class="py-1 hidden" role="none">
                               <!-- Active: "bg-gray-100 text-gray-900", Not Active: "text-gray-700" -->
                               <a href="{{order.customer_url}}" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-0-item-0"> View </a>
                               <a href="{{order.order_status_url}}" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-0-item-1"> Invoice </a>
@@ -88,7 +102,7 @@
                         </div>
   
                         <div class="hidden lg:col-span-2 lg:flex lg:items-center lg:justify-end lg:space-x-4">
-                          <a href="{{order.customer_url}}" class="flex items-center justify-center bg-white py-2 px-2.5 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                          <a href="{{order.order_status_url}}" class="flex items-center justify-center bg-white py-2 px-2.5 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                             <span>View Order</span>
                           </a>
                    
@@ -110,7 +124,7 @@
                                 <h5>{{line_item.product.title}}</h5>
                                 <p class="mt-2 sm:mt-0">{{line_item.final_price | money}}</p>
                               </div>
-                              <p class="hidden text-gray-500 sm:block sm:mt-2">{{line_item.product.description}}</p>
+                              <p class="hidden text-gray-500 sm:block sm:mt-2">{{line_item.product.description | | truncate: 300, '...'}}</p>
                             </div>
                           </div>
   
@@ -201,15 +215,6 @@
       {% endpaginate %}
     </div>
 
-    <div>
-      <h2>{{ 'customer.account.details' | t }}</h2>
-
-      {{ customer.default_address | format_address }}
-
-      <a href="{{ routes.account_addresses_url }}">
-        {{ 'customer.account.view_addresses' | t }} ({{ customer.addresses_count }})
-      </a>
-    </div>
 
   </div>
 </div>
