--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -21,20 +21,7 @@
 
 <div class="m-auto">
   <div class="mx-auto">
-    <div class="bg-gray-600 overflow-hidden relative">
-    <div class="max-w-7xl mx-auto relative py-6 mb-2 overflow-hidden z-20">
-   
-      <h2 class="ml-[20px] text-left text-3xl leading-8 font-extrabold tracking-tight text-white sm:text-4xl">{{section.settings.title}}</h2>
-      <p class="ml-[20px] mt-2 mx-auto text-left text-base text-white ">
-        {{ section.settings.sub_title }}
-      </p>
-    </div>
-    <div aria-hidden="true" class="absolute inset-0 bg-gray-900 opacity-75 z-10"></div>
 
-    <div aria-hidden="true" class="absolute inset-0 overflow-hidden">
-      <img class="hidden md:block w-full h-full object-center object-cover" src="https://cdn.shopify.com/s/files/1/0612/9644/3607/files/Three_Pedals_T56_billet_shift_knob-12.jpg?v=1655377007"/>
-    </div>
-  </div>
     <div class="min-h-full grid grid-rows-2 grid-cols-1 md:grid-rows-1 md:grid-cols-3 mx-auto">
       {% for block in section.blocks %}
     
@@ -59,10 +46,10 @@
         >
         <div aria-hidden="true" class="bg-gradient-to-b from-transparent to-black opacity-50"></div>
 
-        <div class="relative w-full flex flex-col items-start justify-end bg-black bg-opacity-40 p-4 sm:p-6 h-[270px] md:h-125 lg:h-[650px]">
-          <h2 class="text-lg font-medium text-white text-opacity-75">{{block.settings.sub_title}}</h2>
-          <p class="mt-1 text-base font-medium text-white">{{block.settings.title}}</p>
-          <a href="{{block.settings.url}}" class="mt-2 text-sm font-medium text-white bg-transparent py-2.5 pr-4 rounded-md">
+        <div class="relative w-full flex flex-col items-center justify-end bg-black bg-opacity-50 p-4 sm:p-6 h-[270px] md:h-125 lg:h-[650px]">
+          <h2 class="text-lg font-medium text-gray-400 pb-0">{{block.settings.sub_title}}</h2>
+          <p class="mt-1 text-2xl font-extrabold text-white">{{block.settings.title}}</p>
+          <a href="{{block.settings.url}}" class="mt-6 text-sm font-bold text-white bg-primaryRed py-2.5 px-4 rounded-md">
             <span class="absolute inset-0"></span>
 
             SHOP NOW</a>
@@ -91,11 +78,11 @@
 {% else %}
 
 <!-- This example requires Tailwind CSS v2.0+ -->
-<div class="bg-transparent max-w-7xl m-auto">
+<div class="bg-gradient-to-r from-primaryRed via-black to-gray-900 m-auto">
   <div class="max-w-full mx-auto">
     <!-- <p class="text-center text-base font-semibold uppercase text-gray-600 tracking-wider">Looking for other products? We create exhaust systems for numerous cars.</p> -->
 
-    <div class="bg-gradient-to-t from-lightPrimaryBlue via-blue to-gray-900 bg-opacity-90 relative pb-10 pt-10 px-4 mb-2">
+    <div class="bg-gradient-to-r from-primaryRed via-black to-gray-900 bg-opacity-90 relative pb-10 pt-10 px-4 mb-0">
       <h2 class="text-center text-3xl leading-8 font-extrabold tracking-tight text-white sm:text-4xl" style="text-shadow: 1px 2px black;">{{section.settings.title}}</h2>
       <p class="mt-4 max-w-3xl mx-auto text-center text-base text-white">
         {{ section.settings.sub_title }}
@@ -104,12 +91,9 @@
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-2 lg:grid-cols-3">
       {% for block in section.blocks %}
-        <div class="col-span-1 flex justify-around items-center py-16 px-4 bg-gray-50">
-          <div>
-            <h3 class="font-bold text-xl pb-0">{{block.settings.title}}</h3>
-            <p class="text-xs">{{block.settings.sub_title}}</p>
-            <a href="{{block.settings.url}}" class="inline-block bg-lightPrimaryBlue border border-transparent py-1.5 px-4 text-sm font-medium text-white hover:bg-gray-900">SHOP NOW</a>
-          </div>
+        <div class="col-span-1 flex justify-around items-center py-16 px-4 bg-white">
+          <a href="{{block.settings.url}}">
+
        
           <img
           srcset="{%- if block.settings.image.width >= 375 -%}{{ block.settings.image | img_url: '375x' }} 375w,{%- endif -%}
@@ -129,9 +113,14 @@
           width="{{ block.settings.image.width }}"
           height="{{ block.settings.image.width | divided_by: block.settings.image.aspect_ratio }}"
         >
-       
+        <div>
+          <h3 class="font-bold text-xl pb-0">{{block.settings.title}}</h3>
+          <p class="text-xs pt-1 pb-3">{{block.settings.sub_title}}</p>
+          <a href="{{block.settings.url}}" class="inline-block bg-primaryRed border border-transparent py-1.5 px-4 text-sm font-medium text-white hover:bg-gray-900">SHOP NOW</a>
+        </div>
       
-       
+      </a>
+
         </div>
       {% endfor %}
    
