--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -41,15 +41,15 @@
     >
     
   </div>
-  <div aria-hidden="true" class="absolute inset-0 bg-gray-900 opacity-50"></div>
+  <div aria-hidden="true" class="absolute inset-0 bg-gray-900 opacity-60"></div>
 
 
 
   <div class="relative max-w-3xl mx-auto py-32 px-6 flex flex-col items-center text-center sm:py-64 lg:px-0">
-    <h1 class="text-4xl font-extrabold tracking-tight text-white lg:text-6xl" style="text-shadow: 1px 5px black;">{{ section.settings.heading }}</h1>
+    <h1 class="font-extrabold tracking-tight text-white lg:text-2xl" style="text-shadow: 1px 1px black;">{{ section.settings.heading }}</h1>
     <p class="mt-4 text-xl font-semibold text-white">{{ section.settings.subheading }}</p>
     {% if section.settings.button_label != blank %}
-    <a href="{{ section.settings.button_link }}" class="mt-8 inline-block bg-lightPrimaryBlue border border-transparent rounded-md py-3 px-8 text-base font-medium text-white hover:bg-gray-800">{{ section.settings.button_label }}</a>
+    <a href="{{ section.settings.button_link }}" class="mt-8 inline-block bg-primaryRed border border-transparent rounded-md py-3 px-8 text-base font-medium text-white hover:bg-gray-800">{{ section.settings.button_label }}</a>
     {% endif %}
   </div>
 </div>
