--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -23,40 +23,36 @@
 {% endfor %}
 
 <div class="bg-gray-50">
+ 
   <div class="max-w-2xl mx-auto py-4 px-4 sm:py-6 sm:px-6 lg:max-w-7xl lg:px-8">
     <!-- This example requires Tailwind CSS v2.0+ -->
-<nav class="flex" aria-label="Breadcrumb">
-  <ol role="list" class="bg-white rounded-md shadow px-6 flex space-x-4">
-    <li class="flex">
-      <div class="flex items-center">
-        <a href="/" class="text-gray-400 hover:text-gray-500">
-          <!-- Heroicon name: solid/home -->
-          <svg class="flex-shrink-0 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-            <path d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z" />
-          </svg>
-          <span class="sr-only">Home</span>
-        </a>
-      </div>
-    </li>
-    <li class="flex">
-      <div class="flex items-center">
-        <svg class="flex-shrink-0 w-6 h-full text-gray-200" viewBox="0 0 24 44" preserveAspectRatio="none" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-          <path d="M.293 0l22 22-22 22h1.414l22-22-22-22H.293z" />
-        </svg>
-        <a href="{{product.collections[0].url}}" class="ml-4 text-sm font-medium text-gray-500 hover:text-gray-700">{{product.collections[0].title}}</a>
-      </div>
-    </li>
-
-    <li class="flex">
-      <div class="flex items-center">
-        <svg class="flex-shrink-0 w-6 h-full text-gray-200" viewBox="0 0 24 44" preserveAspectRatio="none" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-          <path d="M.293 0l22 22-22 22h1.414l22-22-22-22H.293z" />
-        </svg>
-        <a href="{{product.url}}" class="ml-4 text-sm font-medium text-gray-500 hover:text-gray-700" aria-current="page">{{ product.title }}</a>
-      </div>
-    </li>
-  </ol>
-</nav>
+    <nav aria-label="Breadcrumb">
+      <ol role="list" class="max-w-2xl mx-auto flex items-center space-x-2 lg:max-w-7xl">
+        <li>
+          <div class="flex items-center">
+            <a href="/" class="mr-2 text-sm font-medium text-gray-900">Home</a>
+            <svg width="16" height="20" viewBox="0 0 16 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" class="w-4 h-5 text-gray-300">
+              <path d="M5.697 4.34L8.98 16.532h1.327L7.025 4.341H5.697z" />
+            </svg>
+          </div>
+        </li>
+  
+        {% if product.collections[0].url != blank %}
+        <li>
+          <div class="flex items-center">
+            <a href="{{product.collections[0].url}}" class="mr-2 text-sm font-medium text-gray-900">{{product.collections[0].title}}</a>
+            <svg width="16" height="20" viewBox="0 0 16 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" class="w-4 h-5 text-gray-300">
+              <path d="M5.697 4.34L8.98 16.532h1.327L7.025 4.341H5.697z" />
+            </svg>
+          </div>
+        </li>
+        {% endif %}
+  
+        <li class="text-sm">
+          <a href="{{product.url}}" aria-current="page" class="font-medium text-gray-500 hover:text-gray-600">{{ product.title }}</a>
+        </li>
+      </ol>
+    </nav>
 
     <div class="lg:grid lg:grid-cols-2 lg:gap-x-8 lg:items-start">
       <!-- Image gallery -->
